--- a/app/src/main/res/layout/activity_show_info_about_list_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_list_element.xml
@@ -51,10 +51,10 @@
             android:id="@+id/add_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_above="@+id/Overview"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="74dp"
-            android:layout_marginEnd="25dp"
+            android:layout_alignParentEnd="false"
+            android:layout_alignStart="@+id/tag_runtime"
+            android:layout_below="@+id/tag_runtime"
+            android:layout_marginTop="150dp"
             android:background="@drawable/button_selector"
             android:text="+"
             android:textSize="30sp" />
@@ -128,9 +128,9 @@
             android:id="@+id/seen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/add_button"
-            android:layout_alignEnd="@+id/add_button"
-            android:layout_marginBottom="80dp"
+            android:layout_alignBottom="@+id/youtube"
+            android:layout_marginLeft="60dp"
+            android:layout_toRightOf="@+id/youtube"
             android:text="Seen"
             android:textColor="@color/WhiteSmoke" />
 
@@ -138,10 +138,10 @@
             android:id="@+id/youtube"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="26dp"
-            android:text="Go to youtube"
-            android:layout_alignTop="@+id/seen"
-            android:layout_alignEnd="@+id/runtime" />
+            android:layout_alignBottom="@+id/add_button"
+            android:layout_marginLeft="60dp"
+            android:layout_toRightOf="@+id/add_button"
+            android:text="Go to youtube" />
 
         <TextView
             android:id="@+id/scale"
