--- a/app/src/main/res/layout/layoutfilm.xml
+++ b/app/src/main/res/layout/layoutfilm.xml
@@ -7,13 +7,11 @@
 
     <ImageView
         android:id="@+id/preview"
-
-        android:layout_width="fill_parent"
-        android:layout_height="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/button_selector" />
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/title"
