--- a/app/src/main/res/layout/activity_show_info_about_list_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_list_element.xml
@@ -131,6 +131,7 @@
             android:layout_marginLeft="45dp"
             android:layout_toRightOf="@+id/youtube"
             android:text="Seen"
+            android:clickable="false"
             android:textColor="@color/WhiteSmoke" />
 
         <Button
