--- a/app/src/main/res/layout/activity_show_info_about_tv_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_tv_element.xml
@@ -129,6 +129,7 @@
             android:layout_alignEnd="@+id/add_button"
             android:layout_marginBottom="80dp"
             android:text="Seen"
+            android:clickable="false"
             android:textColor="@color/WhiteSmoke" />
 
         <TextView
