--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -43,10 +43,10 @@
 
     </group>
 
-    <item android:id="@+id/search"
+    <item
+        android:id="@+id/search"
         android:title="search"
-        android:icon="@drawable/ic_search"
-        app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
-
+        android:icon="@drawable/search_icon"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="collapseActionView|ifRoom" />
 </menu>
