--- a/app/src/main/res/layout/layoutfilm.xml
+++ b/app/src/main/res/layout/layoutfilm.xml
@@ -15,12 +15,11 @@
 
     <TextView
         android:id="@+id/title"
-        android:text="bella"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
 
 
 </RelativeLayout>
