--- a/app/src/main/res/layout/layoutfilm.xml
+++ b/app/src/main/res/layout/layoutfilm.xml
@@ -10,8 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:scaleType="fitXY" />
+        android:layout_alignParentRight="true" />
 
     <TextView
         android:id="@+id/title"
