--- a/app/src/main/res/layout/layoutfilm.xml
+++ b/app/src/main/res/layout/layoutfilm.xml
@@ -4,8 +4,12 @@
     android:layout_height="match_parent">
 
 
-
     <ImageView
+        android:id="@+id/preview"
+        android:layout_width="250dp"
+        android:layout_height="375dp" />
+
+    <!--<ImageView
         android:id="@+id/preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,6 +23,6 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
-
+-->
 
 </RelativeLayout>
