--- a/app/src/main/res/layout/activity_show_info_about_list_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_list_element.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/poster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="400dp"
+            android:layout_height="550dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/director"
             android:layout_marginStart="23dp"
@@ -62,12 +62,12 @@
             android:id="@+id/rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="140dp"
+            android:text="rating"
+            android:textSize="30sp"
             android:layout_alignBaseline="@+id/tag_rating"
             android:layout_alignBottom="@+id/tag_rating"
-            android:layout_marginLeft="140dp"
-            android:layout_toRightOf="@+id/tag_rating"
-            android:text="rating"
-            android:textSize="30sp" />
+            android:layout_alignEnd="@+id/youtube" />
 
         <TextView
             android:id="@+id/year"
@@ -147,12 +147,11 @@
             android:id="@+id/scale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/rating"
-            android:layout_alignBottom="@+id/rating"
-            android:layout_toEndOf="@+id/rating"
             android:text="/10"
             android:textColor="@color/WhiteSmoke"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:layout_above="@+id/year"
+            android:layout_toEndOf="@+id/rating" />
 
         <TextView
             android:id="@+id/tag_rating"
