--- a/app/src/main/res/layout/activity_show_info_about_tv_element.xml
+++ b/app/src/main/res/layout/activity_show_info_about_tv_element.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/poster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="400dp"
+            android:layout_height="600dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/creators"
             android:layout_marginStart="23dp"
@@ -65,8 +65,8 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tag_rating"
             android:layout_alignBottom="@+id/tag_rating"
+            android:layout_alignEnd="@id/youtube"
             android:layout_marginLeft="140dp"
-            android:layout_toRightOf="@+id/tag_rating"
             android:text="rating"
             android:textSize="30sp" />
 
