--- a/app/src/main/res/layout/fragment_watched_list.xml
+++ b/app/src/main/res/layout/fragment_watched_list.xml
@@ -5,19 +5,12 @@
     android:background="@color/Really_Really_Dark_Gray"
     tools:context="com.example.simone.whatwatch.WatchedListFragment">
 
-    <!--<GridView
-        android:id="@+id/gridview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="200dp"
-        android:horizontalSpacing="10dp"
-        android:numColumns="3"
-        android:verticalSpacing="10dp" />-->
+
     <GridView
         android:id="@+id/gridview"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginTop="300dp"
         android:clickable="true"
         android:columnWidth="250dp"
         android:drawSelectorOnTop="true"
