--- a/app/src/main/res/layout/fragment_watched_list.xml
+++ b/app/src/main/res/layout/fragment_watched_list.xml
@@ -30,16 +30,74 @@
         android:layout_marginTop="11dp"
         android:text="Stats"
         android:textAlignment="center"
+        android:textColor="@color/WhiteSmoke"
         android:textSize="30sp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tag_film_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/stats"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="40dp"
-        android:text="TextView" />
+        android:layout_marginEnd="59dp"
+        android:layout_marginTop="50dp"
+        android:layout_toStartOf="@+id/stats"
+        android:text="Film Count: "
+        android:textColor="@color/WhiteSmoke"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/tag_series_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/tag_film_count"
+        android:layout_below="@+id/tag_film_count"
+        android:layout_marginTop="32dp"
+        android:text="Series Count:"
+        android:textColor="@color/WhiteSmoke"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/tag_minutes_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/tag_series_count"
+        android:layout_below="@+id/tag_series_count"
+        android:layout_marginTop="32dp"
+        android:text="Minutes Count:"
+        android:textColor="@color/WhiteSmoke"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/film_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tag_series_count"
+        android:layout_marginStart="59dp"
+        android:layout_toEndOf="@+id/stats"
+        android:text="TextView"
+        android:textColor="@color/WhiteSmoke"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/series_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/film_count"
+        android:layout_below="@+id/film_count"
+        android:layout_marginTop="32dp"
+        android:text="TextView"
+        android:textColor="@color/WhiteSmoke"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/minutes_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/series_count"
+        android:layout_below="@+id/series_count"
+        android:layout_marginTop="32dp"
+        android:text="TextView"
+        android:textColor="@color/WhiteSmoke"
+        android:textSize="24sp" />
 
 </RelativeLayout>
