--- a/app/src/main/res/layout/fragment_watched_list.xml
+++ b/app/src/main/res/layout/fragment_watched_list.xml
@@ -114,4 +114,12 @@
         android:textColor="@color/WhiteSmoke"
         android:textSize="24sp" />
 
+    <Button
+        android:id="@+id/open_activity_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/tag_film_count"
+        android:text="Chat" />
+
 </RelativeLayout>
