--- a/app/src/main/res/layout/film_element.xml
+++ b/app/src/main/res/layout/film_element.xml
@@ -73,7 +73,7 @@
         android:textSize="36sp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/joinChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false"
